--- a/style.css
+++ b/style.css
@@ -21,15 +21,13 @@
       box-sizing: border-box;
   }
 
+/*===============================HEADINGS===============================*/
+
   header {
       display: flex;
       justify-content: space-between;
       margin-bottom: 50px;
       width: 100%;
-  }
-
-  .logo {
-      width: 250px;
   }
 
   h1, h2 {
@@ -53,6 +51,8 @@
       margin-top: 0px;
   }
 
+/*===============================GENERAL BODY===============================*/
+
   body {
       font-family: 'Open Sans', sans-serif;
       text-align: center;
@@ -71,150 +71,168 @@
       padding-bottom: 0px;
   }
 
-  .button {
-      font-weight: 600;
-      border: 1px solid;
-      border-radius: 200px;
-      border-color: var(--buttonColor);
-      color: var(--buttonColor);
-      box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.1);
-      padding: 8px 30px;
-  }
+/*===============================BUTTONS===============================*/
 
-  .button.large {
-      font-weight: 700;
-      background-color: var(--buttonColor);
-      color: white;
-      box-shadow: 0px 4px 20px 1px rgba(0,0,0,0.2);
-      font-size: 1.2em;
-      padding: 25px 100px;
-  }
+.button {
+    font-weight: 600;
+    border: 1px solid;
+    border-radius: 200px;
+    border-color: var(--buttonColor);
+    color: var(--buttonColor);
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.1);
+    padding: 8px 30px;
+    cursor: pointer;
+    transition: 0.3s;
+}
 
-  .button.form {
-      background-color: var(--buttonColor);
-      color: white;
-      border-radius: 5px;
-      font-weight: 700;
-      width: calc(30%);
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-  }
+.button:hover {
+    background-color: var(--buttonColor);
+    color: white;
+}
 
-  .subscribeInput {
-      border-radius: 5px;
-      height: 44px;
-      width: calc(70% - 40px);
-  }
+.button.large {
+    font-weight: 700;
+    background-color: var(--buttonColor);
+    color: white;
+    box-shadow: 0px 4px 20px 1px rgba(0,0,0,0.2);
+    font-size: 1.2em;
+    padding: 25px 100px;
+}
 
-    .subscribeSection {
-        margin-top: 40px;
-        display: flex;
-        min-width: 100%;
-        justify-content: space-between;
-    }
+.button.form {
+    background-color: var(--buttonColor);
+    color: white;
+    border-radius: 5px;
+    font-weight: 700;
+    width: calc(30%);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
 
-  p.large {
-      max-width: 620px;
-      margin: auto;
-      margin-bottom: 30px;
-      padding: 20px;
-      font-size: 1.2em;
-  }
+.button.large:hover, .button.form:hover {
+    background-color: white;
+    color: var(--buttonColor);
+}
 
-  #mockup {
-      width: 100%;
-      max-width: 1030px;
-      margin: 120px auto;
-      display: block;
-  }
+/*===============================PARAGRAPHS===============================*/
 
-  .stats {
-      display: flex;
-      justify-content: space-around;
-      text-align: left;
-      margin-bottom: 50px;
-      width: 100%;
-  }
+p.large {
+    max-width: 620px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    font-size: 1.2em;
+}
 
-  .stat .value {
-      font-size: 6em;
-      font-weight: 700;
-      margin-top: -10px;
-      margin-bottom: 10px;
-      text-align: center;
-  }
+p.small {
+    max-width: 375px;
+    text-align: left;
+}
 
-  .stat .label {
-      text-align: center;
-      color: #7D8094;
-      font-size: 1.5em;
-  }
+/*===============================MOCKUP IMAGE===============================*/
 
-  .bodySection {
-      background-color: var(--sectionColor);
-      width: 100vw;
-      margin-top: -5px;
-      padding: 50px 0px;
-  }
-
-  .sectionOuter {
-      width: 100%;
-      max-width: 1440px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0px var(--pageBorder);
-      margin: auto;
-  }
-
-  .sectionOuter.align-top {
-      align-items: flex-start;
-  }
-
-  .bodySection.reversed {
-      background-color: white;
-  }
-
-  .bodySection.reversed .sectionOuter {
-      flex-direction: row-reverse;
-  }
-
-  .bodySection.footer {
-      background-color: var(--footerColor);
-  }
-
-  .sectionOuter div {
-      width: 50%;
-      max-width: 520px;
-      text-align: left;
-      margin: 10px;
-  }
-
-  .bodyImage img {
-      width: 100%;
-  }
-
-  .footerWave {
-      margin-top: 200px;
-  }
-
-  footer {
-      width: 100vw;
-      padding: 40px 110px;
-      padding-left: calc((100vw - 1440px) / 2);
-      padding-right: calc((100vw - 1440px) / 2);
-      margin-top: -5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-weight: 600;
-      font-size: 0.96em;
-  }
-
-.sectionOuter div.socialMedia {
+#mockup {
     width: 100%;
+    max-width: 1030px;
+    margin: 120px auto;
+    display: block;
+}
+
+/*===============================STATS SECTION===============================*/
+
+.stats {
+    display: flex;
+    justify-content: space-around;
+    text-align: left;
+    margin-bottom: 50px;
+    width: 100%;
+}
+
+.stat .value {
+    font-size: 6em;
+    font-weight: 700;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.stat .label {
+    text-align: center;
+    color: #7D8094;
+    font-size: 1.5em;
+}
+
+/*===============================BODY SECTIONS===============================*/
+
+.bodySection {
+    background-color: var(--sectionColor);
+    width: 100vw;
+    margin-top: -5px;
+    padding: 50px 0px;
+}
+
+.sectionOuter {
+    width: 100%;
+    max-width: 1440px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px var(--pageBorder);
+    margin: auto;
+}
+
+.sectionOuter.align-top {
+    align-items: flex-start;
+}
+
+.bodySection.reversed {
+    background-color: white;
+}
+
+.bodySection.reversed .sectionOuter {
+    flex-direction: row-reverse;
+}
+
+footer.bodySection {
+    background-color: var(--footerColor);
+}
+
+.sectionOuter div {
+    width: 50%;
+    max-width: 520px;
+    text-align: left;
+    margin: 10px;
+    margin-left: 0px;
+}
+
+.bodyImage img {
+    width: 100%;
+}
+
+.waves {
+    width: 100vw;
+}
+
+.mobile {
+    display: none;
+}
+
+/*===============================FOOTER===============================*/
+
+.footerWave {
+    margin-top: 200px;
+}
+
+footer {
+    width: 100vw;
+    padding: 40px 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    font-size: 0.96em;
 }
 
 .socialMedia {
@@ -223,33 +241,34 @@
     width: 100%;
 }
 
-.socialMedia i {
-    margin-right: 25px;
-}
-
 .icon {
-  margin-right: 20px;
-}
-
-.small{
-  max-width: 380px;
-}
-
-.left {
-  text-align: left;
+    margin-right: 20px;
 }
 
 img.white {
-  filter: brightness(100);
+    filter: brightness(100);
 }
 
-.waves {
-  width: 100vw;
+/*=========================SUBSCRIBE SECTION=========================*/
+
+.subscribeInput {
+    border: 1px solid transparent;
+    border-radius: 5px;
+    height: 44px;
+    width: 100%;
+    margin-right: 40px;
+    font-size: 1.2em;
+    padding-left: 10px;
 }
 
-.mobile {
-    display: none;
+.subscribeSection {
+    margin-top: 40px;
+    display: flex;
+    min-width: 100%;
+    justify-content: space-between;
 }
+
+/*===============================RESPONSIVE===============================*/
 
 @media screen and (max-width: 900px) {
     :root {
@@ -279,6 +298,8 @@ img.white {
         margin-top: 150px;
         margin-bottom: 30px;
     }
+    
+/*====================================BUTTONS====================================*/
 
     .button {
         padding: 5px 30px;
@@ -290,10 +311,24 @@ img.white {
 
     .button.form {
         height: 44px;
-        font-size: 1.1em;
+        font-size: 1.6em;
         margin-top: 15px;
         padding: 5px 80px;
     }
+    
+/*================================PARAGRAPHS================================*/
+
+    p.small {
+        max-width: 1000px;
+    }
+
+    p.large {
+        padding: 0px;
+        margin-bottom: 50px;
+        font-size: 1.3em;
+    }
+    
+/*====================================STATS====================================*/
 
     .stats {
         flex-direction: column;
@@ -305,6 +340,8 @@ img.white {
         max-width: 200px;
         margin: 50px auto;
     }
+    
+/*===============================BODY SECTIONS===============================*/
 
     .sectionOuter {
         flex-direction: column-reverse;
@@ -320,27 +357,6 @@ img.white {
         font-size: 1.5em;
     }
 
-    footer {
-        line-height: 3em;
-    }
-
-    footer .sectionOuter div:first-child {
-        margin-bottom: 0px;
-    }
-
-    footer .sectionOuter div {
-        text-align: left;
-    }
-
-    footer.bodySection.footer {
-        padding-bottom: 0px;
-    }
-
-    div.socialMedia {
-        margin-bottom: 40px;
-        margin-top: 40px;
-    }
-
     .bodySection.reversed .sectionOuter {
       flex-direction: column-reverse;
     }
@@ -353,6 +369,31 @@ img.white {
         display: none;
     }
 
+/*==================================FOOTER==================================*/
+    
+    footer {
+        line-height: 3em;
+    }
+
+    footer .sectionOuter div:first-child {
+        margin-bottom: 0px;
+    }
+
+    footer .sectionOuter div {
+        text-align: left;
+    }
+
+    footer.bodySection {
+        padding-bottom: 0px;
+    }
+
+    div.socialMedia {
+        margin-bottom: 40px;
+        margin-top: 40px;
+    }  
+    
+/*===============================SUBSCRIBE SECTION===============================*/
+    
     .subscribeSection {
         flex-direction: column;
         align-items: flex-end;
@@ -360,15 +401,8 @@ img.white {
 
     .subscribeInput {
         width: 100%;
+        font-size: 1.5em;
+        margin-right: 0px;
     }
-
-    .small {
-        max-width: 1000px;
-    }
-
-    p.large {
-        padding: 0px;
-        margin-bottom: 50px;
-    }
-
+    
 }
