--- a/style.css
+++ b/style.css
@@ -277,17 +277,13 @@ img.white {
 }
 
 @media screen and (max-width: 680px) {
-    :root {
-        --pageBorder: 40px;
-    }
-
     body {
         font-size: 11px;
     }
 
     .logo {
         max-height: 30px;
-        max-width: 170px
+        max-width: 186px
     }
 
     header {
@@ -405,4 +401,22 @@ img.white {
         margin-right: 0px;
     }
     
+}
+
+@media screen and (max-width: 375px){
+    .logo {
+        max-height: 20px;
+        max-width: 124px;
+    }
+    
+    .button {
+        padding: 5px 20px;
+    }
+    
+    h1 {
+        padding: 20px;
+        margin-top: 150px;
+        margin-bottom: 30px;
+        font-size: 2.2em;
+    }
 }
